# koorma

./: .clang-format  .gitignore  CMakeLists.txt  DECISIONS.md  FORMAT.md  README.md  conanfile.py
bench/: CMakeLists.txt  bench_main.cpp
include/koorma/: config.hpp  key_view.hpp  kv_store.hpp  status.hpp  table.hpp  tree_options.hpp  turtle_kv_compat.hpp  value_view.hpp
src/: CMakeLists.txt  api.cpp
src/engine/: checkpoint_writer.cpp  checkpoint_writer.hpp  kv_store_impl.cpp  manifest.cpp  manifest.hpp  page_allocator.cpp  page_allocator.hpp
src/format/: active_pivots.hpp  bloom_filter.cpp  bloom_filter.hpp  change_log_slot.hpp  checkpoint_slot.hpp  endian.hpp  packed_array.hpp  packed_checkpoint.hpp  packed_filter.hpp  packed_key_value.hpp  packed_leaf.hpp  packed_node.hpp  packed_page_id.hpp  packed_page_slice.hpp  packed_pointer.hpp  packed_uuid.hpp  packed_value_offset.hpp  page_layout.hpp  page_layout_id.hpp  root_buffer.cpp  root_buffer.hpp  superblock.hpp
src/io/: crc.cpp  crc.hpp  page_catalog.cpp  page_catalog.hpp  page_file.cpp  page_file.hpp
src/mem/: memtable.cpp  memtable.hpp
src/tree/: leaf_builder.cpp  leaf_builder.hpp  leaf_rebuild.cpp  leaf_rebuild.hpp  leaf_view.cpp  leaf_view.hpp  node_builder.cpp  node_builder.hpp  node_view.cpp  node_view.hpp  walker.cpp  walker.hpp
test/: CMakeLists.txt  bloom_filter_test.cpp  bloom_integration_test.cpp  checkpoint_test.cpp  concurrency_test.cpp  create_test.cpp  deep_tree_test.cpp  flush_test.cpp  format_test.cpp  incremental_checkpoint_test.cpp  leaf_roundtrip_test.cpp  manifest_test.cpp  memtable_test.cpp  multi_checkpoint_test.cpp  multi_leaf_checkpoint_test.cpp  page_allocator_test.cpp  put_get_test.cpp  reclamation_test.cpp  root_buffer_test.cpp  scan_test.cpp  sharded_memtable_test.cpp  value_view_test.cpp  walker_test.cpp
