include(GoogleTest)

function(koorma_add_test name)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} PRIVATE koorma_core GTest::gtest GTest::gtest_main)
  target_include_directories(${name} PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/src)
  gtest_discover_tests(${name})
endfunction()

koorma_add_test(format_test format_test.cpp)
koorma_add_test(value_view_test value_view_test.cpp)
koorma_add_test(manifest_test manifest_test.cpp)
koorma_add_test(leaf_roundtrip_test leaf_roundtrip_test.cpp)
koorma_add_test(walker_test walker_test.cpp)
koorma_add_test(memtable_test memtable_test.cpp)
koorma_add_test(page_allocator_test page_allocator_test.cpp)
koorma_add_test(create_test create_test.cpp)
koorma_add_test(put_get_test put_get_test.cpp)
koorma_add_test(checkpoint_test checkpoint_test.cpp)
koorma_add_test(sharded_memtable_test sharded_memtable_test.cpp)
koorma_add_test(scan_test scan_test.cpp)
koorma_add_test(multi_leaf_checkpoint_test multi_leaf_checkpoint_test.cpp)
koorma_add_test(concurrency_test concurrency_test.cpp)
koorma_add_test(deep_tree_test deep_tree_test.cpp)
