include(GoogleTest)

function(koorma_add_test name)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} PRIVATE koorma_core GTest::gtest GTest::gtest_main)
  target_include_directories(${name} PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/src)
  gtest_discover_tests(${name})
endfunction()

koorma_add_test(format_test format_test.cpp)
koorma_add_test(value_view_test value_view_test.cpp)
koorma_add_test(manifest_test manifest_test.cpp)
koorma_add_test(leaf_roundtrip_test leaf_roundtrip_test.cpp)
koorma_add_test(walker_test walker_test.cpp)
koorma_add_test(memtable_test memtable_test.cpp)
koorma_add_test(page_allocator_test page_allocator_test.cpp)
koorma_add_test(create_test create_test.cpp)
koorma_add_test(put_get_test put_get_test.cpp)
koorma_add_test(checkpoint_test checkpoint_test.cpp)
koorma_add_test(sharded_memtable_test sharded_memtable_test.cpp)
koorma_add_test(scan_test scan_test.cpp)
koorma_add_test(multi_leaf_checkpoint_test multi_leaf_checkpoint_test.cpp)
koorma_add_test(concurrency_test concurrency_test.cpp)
koorma_add_test(deep_tree_test deep_tree_test.cpp)
koorma_add_test(bloom_filter_test bloom_filter_test.cpp)
koorma_add_test(bloom_integration_test bloom_integration_test.cpp)
koorma_add_test(multi_checkpoint_test multi_checkpoint_test.cpp)
koorma_add_test(reclamation_test reclamation_test.cpp)
koorma_add_test(root_buffer_test root_buffer_test.cpp)
koorma_add_test(incremental_checkpoint_test incremental_checkpoint_test.cpp)
koorma_add_test(flush_test flush_test.cpp)
